--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -86,4 +86,7 @@ a:hover
 .icons_link
     background-image: url('../img/icon-link.png')
 
+.img-fluid_max-width
+    width: 50px
+    height: 50px
 
