--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -146,7 +146,10 @@
   color: #464646
   &__link
     margin-bottom: 5px
+
 figure
+  display: inline-block 
+.photo-gallery__photos
   +r(960)
     display: flex
     justify-content: space-evenly
