--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -297,8 +297,8 @@
                 </a>
             </figure>
             <figure>
-              <a class="fancybox-button" rel="fancybox-button" href=".img/art2.jpg">
-                <img src=".img/art2.jpg" alt="" class="img-fluid img-fluid_max-width"/>
+              <a class="fancybox-button" rel="fancybox-button" href="img/art2.jpg">
+                <img src="img/art2.jpg" alt="" class="img-fluid img-fluid_max-width"/>
                 </a>
             </figure>
             <figure>
