--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,9 +1,6 @@
 @import helpers/all
 @import generated/sprite-svg
-@import lib/slick
-@import lib/fancybox
-@import lib/fancybox-buttons
-@import lib/fancybox-thumbs
+@import lib/all
 @import common
 @import layouts
 @import main
