--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -20,6 +20,11 @@ body
 .img-fluid_max-width
     width: 50px
     height: 50px
+    +r(960)
+        max-width: 100%
+        height: 80px
+        
+
     
 .page__container
   max-width: 940px
