--- a/src/sass/lib/_fancybox-buttons.scss
+++ b/src/sass/lib/_fancybox-buttons.scss
@@ -1,5 +1,5 @@
 // no longer use image-url since that is not a part of the sass spec.  Instead assign your path to this variable
-$fancybox-image-url: '/img/fancy-icon/' ;
+$fancybox-image-url: '/img/' ;
 
 #fancybox-buttons {
 	position: fixed;
