--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -21,8 +21,8 @@ body
     width: 50px
     height: 50px
     +r(960)
-        max-width: 100%
-        height: 80px
+        width: 100%
+        height: auto
         
 
     
