--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -1,359 +1,21 @@
---- title: Index page --- {% extends "layouts/_layout.html" %} {% block content %}
+--- title: Index page --- 
+{% extends "layouts/_layout.html" %} {% block content %}
 
 
+{% include "partials/_header.html" %} {% block header %}
 
-<div class="page__container">
-  <div class="head">
-    <div class="head__logo">
-      <a href="#" class="logo">
-        <span class="logo__part">Jet</span>
-        <span class="logo__part logo__part_lighter">Ro</span>
-      </a>
-    </div>
-    <div class="head__nav">
-      <nav class="nav">
-        <a href="#" class="nav__link">home</a>
-        <a href="#" class="nav__link">about us</a>
-        <a href="#" class="nav__link link_active">blog</a>
-        <a href="#" class="nav__link">portfolio</a>
-        <a href="#" class="nav__link">contact us</a>
-      </nav>
-    </div>
-  </div>
-</div>
-<div class="page__title">
-  <div class="title">
-    <div class="page__container">
-      <h1 class="title__heading">
-        Blog
-      </h1>
-    </div>
-  </div>
-</div>
-<div class="page__container">
-  <div class="blog-post">
-    <div class="blog-post__main">
-      <div class="post">
-        <div class="slider">
-          <div class="icons icons_slide-1"></div>
-          <div class="slider__next">{{mixins.icon('arrow')}}</div>
-          <div class="slider__prev">{{mixins.icon('arrow')}}</div>
-          <div class="slider-slides js-post">
-            <div class="slider-slides__bg" style="background-image: url('img/slide.png'); background-size: cover">
-            </div>
-            <div class="slider-slides__bg" style="background-image: url('img/slide.png'); background-size: cover">
-            </div>
-            <div class="slider-slides__bg" style="background-image: url('img/slide.png'); background-size: cover">
-            </div>
-          </div>
-        </div>
-        <div class="post__promo">
-          <div class="promo-inner">
-            <div class="promo-inner__tab">
-              <div class="tab-date">
-                <h3 class="tab-date__heading h3-heading_bebas">Date</h3>
-                <span class="tab-date__dny date__dny_another span_mod">
-                  <a href="#">Jule 25, 2018</a>
-                </span>
-              </div>
-              <div class="tab-tags">
-                <h3 class="tab-tags__tags h3-heading_bebas">Tags</h3>
-                <span class="tag tags_1 span_mod">
-                  <a href="#">Website</a>
-                </span>
-                <span class="tag tags_2 span_mod">
-                  <a href="#">Design</a>
-                </span>
-              </div>
-              <div class="tab-comments">
-                <h3 class="tab-comments__comments h3-heading_bebas">comments</h3>
-                <span class="tab-comments__quantity quantity_tab-comments span_mod">
-                  <a href="#">4</a>
-                </span>
-              </div>
-            </div>
-            <div class="description">
-              <h2 class="description__heading heading_color">
-                Top WordPress Themes of 2012
-              </h2>
-              <p class="description__text text_color">
-                Lorem ipsum dolor sit amet, sit an molestie neglegentur concludaturque. Possim hendrerit in usu. Iriure delectus mea at, vis dicit laudem ex, vel eu possim imperdiet consequuntur. Brute ipsum tincidunt vim ei. Ne eos vidisse splendide instructior. Mei no latine praesent forensibus, te sed habemus tacimates, ad ipsum officiis constituto usu.
-              </p>
-              <p class="description__text_more text_color">
-                Maecenas ipsum metus, semper hendrerit varius mattis, congue sit amet tellus. Aliquam ullamcorper dui sed magna posuere ut elementum enim rutrum. Nam mi erat, porta id ultrices nec, pellentesque vel nunc. Cras varius fermentum iaculis
-                <span class="dot">...</span>
-              </p>
+{% endblock %}
+{% include "partials/_title.html" %} {% block title %}
 
-            </div>
+{% endblock %}
+{% include "partials/_main.html" %} {% block main %}
 
-          </div>
-          <div class="bottom-line"></div>
-        </div>
+{% endblock %}
 
 
-      </div>
+{% include "layouts/_pagination.html" %} {% block pagination %}
 
-      <div class="post">
-        <div class="slider">
-          <div class="icons icons_slide-2"></div>
-          <div class="slider-slides js-post-2">
-            <div class="slider-slides__bg" style="background-image: url('img/slide-2.png'); background-size: cover">
-            </div>
-            <div class="slider-slides__bg" style="background-image: url('img/slide-2.png'); background-size: cover">
-            </div>
-            <div class="slider-slides__bg" style="background-image: url('img/slide-2.png'); background-size: cover">
-            </div>
-          </div>
-        </div>
-        <div class="post__promo">
-          <div class="promo-inner">
-            <div class="promo-inner__tab">
-              <div class="tab-date">
-                <h3 class="tab-date__heading h3-heading_bebas">Date</h3>
-                <span class="tab-date__dny date__dny_another span_mod">
-                  <a href="#">Jule 25, 2018</a>
-                </span>
-              </div>
-              <div class="tab-tags">
-                <h3 class="tab-tags__tags h3-heading_bebas">Tags</h3>
-                <span class="tag tags_1 span_mod">
-                  <a href="#">Website</a>
-                </span>
-                <span class="tag tags_2 span_mod">
-                  <a href="#">Design</a>
-                </span>
-              </div>
-              <div class="tab-comments">
-                <h3 class="tab-comments__comments h3-heading_bebas">comments</h3>
-                <span class="tab-comments__quantity quantity_tab-comments span_mod">
-                  <a href="#">4</a>
-                </span>
-              </div>
-            </div>
-            <div class="description">
-              <h2 class="description__heading heading_color">
-                Jesus Typography Wallpaper Giveaway!
-              </h2>
-              <p class="description__text text_color">
-                Lorem ipsum dolor sit amet, sit an molestie neglegentur concludaturque. Possim hendrerit in usu. Iriure delectus mea at, vis dicit laudem ex, vel eu possim imperdiet consequuntur. Brute ipsum tincidunt vim ei. Ne eos vidisse splendide instructior. Mei no latine praesent forensibus, te sed habemus tacimates, ad ipsum officiis constituto usu.
-              </p>
-              <p class="description__text_more text_color">
-                Maecenas ipsum metus, semper hendrerit varius mattis, congue sit amet tellus. Aliquam ullamcorper dui sed magna posuere ut elementum enim rutrum. Nam mi erat, porta id ultrices nec, pellentesque vel nunc. Cras varius fermentum iaculis
-                <span class="dot">...</span>
-              </p>
-
-            </div>
-
-          </div>
-          <div class="bottom-line"></div>
-        </div>
-      </div>
-      <div class="post">
-        <div class="icons icons_video"></div>
-        <div class="post__video">
-          <div style="padding:56.25% 0 0 0;position:relative;">
-            <iframe src="https://player.vimeo.com/video/47706295?color=e8603c" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-          </div>
-          <script src="https://player.vimeo.com/api/player.js"></script>
-          <p>
-            <a href="https://vimeo.com/47706295"></a>
-            <a href="https://vimeo.com/roberthillailv"></a>
-            <a href="https://vimeo.com"></a>.</p>
-        </div>
-        <div class="post__promo">
-          <div class="promo-inner">
-            <div class="promo-inner__tab">
-              <div class="tab-date">
-                <h3 class="tab-date__heading h3-heading_bebas">Date</h3>
-                <span class="tab-date__dny date__dny_another span_mod">
-                  <a href="#">Jule 25, 2018</a>
-                </span>
-              </div>
-              <div class="tab-tags">
-                <h3 class="tab-tags__tags h3-heading_bebas">Tags</h3>
-                <span class="tag tags_1 span_mod">
-                  <a href="#">Website</a>
-                </span>
-                <span class="tag tags_2 span_mod">
-                  <a href="#">Design</a>
-                </span>
-              </div>
-              <div class="tab-comments">
-                <h3 class="tab-comments__comments h3-heading_bebas">comments</h3>
-                <span class="tab-comments__quantity quantity_tab-comments span_mod">
-                  <a href="#">4</a>
-                </span>
-              </div>
-            </div>
-            <div class="description">
-              <h2 class="description__heading heading_color">
-                Big Buck Bunny Trailer
-              </h2>
-              <p class="description__text text_color">
-                Lorem ipsum dolor sit amet, sit an molestie neglegentur concludaturque. Possim hendrerit in usu. Iriure delectus mea at, vis dicit laudem ex, vel eu possim imperdiet consequuntur. Brute ipsum tincidunt vim ei. Ne eos vidisse splendide instructior. Mei no latine praesent forensibus, te sed habemus tacimates, ad ipsum officiis constituto usu.
-              </p>
-              <p class="description__text_more text_color">
-                Maecenas ipsum metus, semper hendrerit varius mattis, congue sit amet tellus. Aliquam ullamcorper dui sed magna posuere ut elementum enim rutrum. Nam mi erat, porta id ultrices nec, pellentesque vel nunc. Cras varius fermentum iaculis
-                <span class="dot">...</span>
-              </p>
-
-            </div>
-
-          </div>
-          <div class="bottom-line"></div>
-        </div>
-      </div>
-      <blockquote class="blockquote">
-        <div class="icons icons_blockquote"></div>
-        <div class="blockquote-block">
-          <span class="blockquote-block__comma">,,</span>
-
-          <p class="blockquote-block__text">
-            Write anything you want here in this quotable area. Something unique you want people to learn about your website or some cool random fact. Its totally up to you.
-          </p>
-        </div>
-
-
-
-      </blockquote>
-      <div class="bottom-line"></div>
-      <div class="link">
-        <div class="icons icons_link"></div>
-        <h2 class="link__heading heading_color">
-          SOME OF THE BEST FREEBIES ON THE WEB
-        </h2>
-        <a href="www.bestpsdfreebies.com" class="link__bestpsd">www.bestpsdfreebies.com</a>
-
-
-        <p class="link__description text_color">
-          Lorem ipsum dolor sit amet, sit an molestie neglegentur concludaturque. Possim hendrerit in usu. Iriure delectus mea at, vis dicit laudem ex, vel eu possim imperdiet consequuntur. Brute ipsum tincidunt vim ei
-        </p>
-
-
-      </div>
-      <div class="bottom-line"></div>
-    </div>
-    <aside class="blog-post__aside">
-      <div class="aside-about">
-        <div class="aside-about__heading">
-          <h4 class="h4-heading-line">About Jetro</h4>
-        </div>
-        <div class="aside-about__description">
-          <p class="text_color">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praese nt libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elemen tum imperdiet. Duis sagittis ipsum.
-          </p>
-        </div>
-      </div>
-      <div class="aside__categories">
-        <div class="categories-block">
-          <div class="categories-block__heading">
-            <h4 class="h4-heading-line">Categories</h4>
-          </div>
-          <div class="categories-block__category">
-            <ul class="categories-list">
-              <li class="categories-list__video">
-                <a href="#" class="categories-list__link">Video
-                  <span class="categories-list__quantity">(3)</span>
-                </a>
-              </li>
-              <li class="categories-list__sports">
-                <a href="#" class="categories-list__link">Sports
-                  <span class="categories-list__quantity">(5)</span>
-                </a>
-              </li>
-              <li class="categories-list__media">
-                <a href="#" class="categories-list__link">Media
-                  <span class="categories-list__quantity">(2)</span>
-                </a>
-              </li>
-              <li class="categories-list__entertainment">
-                <a href="#" class="categories-list__link">Entertainment
-                  <span class="categories-list__quantity">(7)</span>
-                </a>
-              </li>
-              <li class="categories-list__life">
-                <a href="#" class="categories-list__link">Life
-                  <span class="categories-list__quantity">(4)</span>
-                </a>
-              </li>
-              <li class="categories-list__super">
-                <a href="#" class="categories-list__link">Super Cool Stuff
-                  <span class="categories-list__quantity">(8)</span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="aside__photo-gallery">
-        <div class="photo-gallery">
-          <div class="photo-gallery__heading">
-            <h4 class="h4-heading-line">Photo gallery</h4>
-          </div>
-          <div class="photo-gallery__photos"> 
-            <figure>
-              <a class="fancybox-button" rel="fancybox-button" href="img/art1.jpg">
-                <img src="img/art1.jpg" alt="wolf" class="img-fluid img-fluid_max-width"/>
-                </a>
-            </figure>
-            <figure>
-              <a class="fancybox-button" rel="fancybox-button" href="img/art2.jpg">
-                <img src="img/art2.jpg" alt="wolf" class="img-fluid img-fluid_max-width"/>
-                </a>
-            </figure>
-            <figure>
-              <a class="fancybox-button" rel="fancybox-button" href="img/art3.jpg">
-                <img src="img/art3.jpg" alt="wolf" class="img-fluid img-fluid_max-width"/>
-                </a>
-            </figure>
-            <figure>
-              <a class="fancybox-button" rel="fancybox-button" href="img/art4.jpg">
-                <img src="img/art4.jpg" alt="wolf" class="img-fluid img-fluid_max-width"/>
-                </a>
-            </figure>
-            <figure>
-              <a class="fancybox-button" rel="fancybox-button" href="img/art5.jpg">
-                <img src="img/art5.jpg" alt="wolf" class="img-fluid img-fluid_max-width"/>
-                </a>
-            </figure>
-            <figure>
-              <a class="fancybox-button" rel="fancybox-button" href="img/art6.jpg">
-                <img src="img/art6.jpg" alt="wolf" class="img-fluid img-fluid_max-width"/>
-                </a>
-            </figure>
-            <figure>
-              <a class="fancybox-button" rel="fancybox-button" href="img/art7.jpg">
-                <img src="img/art7.jpg" alt="wolf" class="img-fluid img-fluid_max-width"/>
-                </a>
-            </figure>
-            <figure>
-              <a class="fancybox-button" rel="fancybox-button" href="img/coderiver-logo.jpg">
-                <img src="img/coderiver-logo.jpg" alt="wolf" class="img-fluid img-fluid_max-width"/>
-                </a>
-            </figure>
-          </div>
-        </div>
-      </div>
-    </aside>
-
-  </div>
-
-</div>
-<div class="page__container">
-  <div class="pagination">
-    <div class="pagination__page">
-      <a href="#" class="page-pagination">1</a>
-    </div>
-    <div class="pagination__page">
-      <a href="#" class="page-pagination">2</a>
-    </div>
-    <div class="pagination__page">
-      <a href="#" class="page-pagination">3</a>
-    </div>
-  </div>
-</div>
-
-
+{% endblock %}
 
 
 
