--- a/src/templates/partials/_main.html
+++ b/src/templates/partials/_main.html
@@ -4,7 +4,9 @@
     <div class="blog-post__main">
       <div class="post">
         <div class="slider">
-          <div class="icons icons_slide-1"></div>
+          <div class="icons icons_slide-1">
+            <img src="img/icon-slide-1.png" alt="">
+          </div>
           <div class="slider__next">{{mixins.icon('arrow')}}</div>
           <div class="slider__prev">{{mixins.icon('arrow')}}</div>
           <div class="slider-slides js-post">
@@ -20,13 +22,13 @@
           <div class="promo-inner">
             <div class="promo-inner__tab">
               <div class="tab-date">
-                <h3 class="tab-date__heading h3-heading_bebas">Date</h3>
+                <h3 class="tab-date__heading h3-heading_text">Date</h3>
                 <span class="tab-date__dny date__dny_another span_mod">
                   <a href="#">Jule 25, 2018</a>
                 </span>
               </div>
               <div class="tab-tags">
-                <h3 class="tab-tags__tags h3-heading_bebas">Tags</h3>
+                <h3 class="tab-tags__tags h3-heading_text">Tags</h3>
                 <span class="tag tags_1 span_mod">
                   <a href="#">Website</a>
                 </span>
@@ -35,7 +37,7 @@
                 </span>
               </div>
               <div class="tab-comments">
-                <h3 class="tab-comments__comments h3-heading_bebas">comments</h3>
+                <h3 class="tab-comments__comments h3-heading_text">comments</h3>
                 <span class="tab-comments__quantity quantity_tab-comments span_mod">
                   <a href="#">4</a>
                 </span>
@@ -45,10 +47,10 @@
               <h2 class="description__heading heading_color">
                 Top WordPress Themes of 2012
               </h2>
-              <p class="description__text text_color">
+              <p>
                 Lorem ipsum dolor sit amet, sit an molestie neglegentur concludaturque. Possim hendrerit in usu. Iriure delectus mea at, vis dicit laudem ex, vel eu possim imperdiet consequuntur. Brute ipsum tincidunt vim ei. Ne eos vidisse splendide instructior. Mei no latine praesent forensibus, te sed habemus tacimates, ad ipsum officiis constituto usu.
               </p>
-              <p class="description__text_more text_color">
+              <p>
                 Maecenas ipsum metus, semper hendrerit varius mattis, congue sit amet tellus. Aliquam ullamcorper dui sed magna posuere ut elementum enim rutrum. Nam mi erat, porta id ultrices nec, pellentesque vel nunc. Cras varius fermentum iaculis
                 <span class="dot">...</span>
               </p>
@@ -64,7 +66,9 @@
 
       <div class="post">
         <div class="slider">
-          <div class="icons icons_slide-2"></div>
+          <div class="icons icons_slide-2">
+            <img src="img/icon-slide-2.png" alt="">
+          </div>
           <div class="slider-slides js-post-2">
             <div class="slider-slides__bg" style="background-image: url('img/slide-2.png'); background-size: cover">
             </div>
@@ -78,13 +82,13 @@
           <div class="promo-inner">
             <div class="promo-inner__tab">
               <div class="tab-date">
-                <h3 class="tab-date__heading h3-heading_bebas">Date</h3>
+                <h3 class="tab-date__heading h3-heading_text">Date</h3>
                 <span class="tab-date__dny date__dny_another span_mod">
                   <a href="#">Jule 25, 2018</a>
                 </span>
               </div>
               <div class="tab-tags">
-                <h3 class="tab-tags__tags h3-heading_bebas">Tags</h3>
+                <h3 class="tab-tags__tags h3-heading_text">Tags</h3>
                 <span class="tag tags_1 span_mod">
                   <a href="#">Website</a>
                 </span>
@@ -93,7 +97,7 @@
                 </span>
               </div>
               <div class="tab-comments">
-                <h3 class="tab-comments__comments h3-heading_bebas">comments</h3>
+                <h3 class="tab-comments__comments h3-heading_text">comments</h3>
                 <span class="tab-comments__quantity quantity_tab-comments span_mod">
                   <a href="#">4</a>
                 </span>
@@ -103,10 +107,10 @@
               <h2 class="description__heading heading_color">
                 Jesus Typography Wallpaper Giveaway!
               </h2>
-              <p class="description__text text_color">
+              <p>
                 Lorem ipsum dolor sit amet, sit an molestie neglegentur concludaturque. Possim hendrerit in usu. Iriure delectus mea at, vis dicit laudem ex, vel eu possim imperdiet consequuntur. Brute ipsum tincidunt vim ei. Ne eos vidisse splendide instructior. Mei no latine praesent forensibus, te sed habemus tacimates, ad ipsum officiis constituto usu.
               </p>
-              <p class="description__text_more text_color">
+              <p>
                 Maecenas ipsum metus, semper hendrerit varius mattis, congue sit amet tellus. Aliquam ullamcorper dui sed magna posuere ut elementum enim rutrum. Nam mi erat, porta id ultrices nec, pellentesque vel nunc. Cras varius fermentum iaculis
                 <span class="dot">...</span>
               </p>
@@ -118,7 +122,9 @@
         </div>
       </div>
       <div class="post">
-        <div class="icons icons_video"></div>
+        <div class="icons icons_video">
+          <img src="img/icon-play.png" alt="">
+        </div>
         <div class="post__video">
           <div style="padding:56.25% 0 0 0;position:relative;">
             <iframe src="https://player.vimeo.com/video/47706295?color=e8603c" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -133,13 +139,13 @@
           <div class="promo-inner">
             <div class="promo-inner__tab">
               <div class="tab-date">
-                <h3 class="tab-date__heading h3-heading_bebas">Date</h3>
+                <h3 class="tab-date__heading h3-heading_text">Date</h3>
                 <span class="tab-date__dny date__dny_another span_mod">
                   <a href="#">Jule 25, 2018</a>
                 </span>
               </div>
               <div class="tab-tags">
-                <h3 class="tab-tags__tags h3-heading_bebas">Tags</h3>
+                <h3 class="tab-tags__tags h3-heading_text">Tags</h3>
                 <span class="tag tags_1 span_mod">
                   <a href="#">Website</a>
                 </span>
@@ -148,7 +154,7 @@
                 </span>
               </div>
               <div class="tab-comments">
-                <h3 class="tab-comments__comments h3-heading_bebas">comments</h3>
+                <h3 class="tab-comments__comments h3-heading_text">comments</h3>
                 <span class="tab-comments__quantity quantity_tab-comments span_mod">
                   <a href="#">4</a>
                 </span>
@@ -158,10 +164,10 @@
               <h2 class="description__heading heading_color">
                 Big Buck Bunny Trailer
               </h2>
-              <p class="description__text text_color">
+              <p>
                 Lorem ipsum dolor sit amet, sit an molestie neglegentur concludaturque. Possim hendrerit in usu. Iriure delectus mea at, vis dicit laudem ex, vel eu possim imperdiet consequuntur. Brute ipsum tincidunt vim ei. Ne eos vidisse splendide instructior. Mei no latine praesent forensibus, te sed habemus tacimates, ad ipsum officiis constituto usu.
               </p>
-              <p class="description__text_more text_color">
+              <p>
                 Maecenas ipsum metus, semper hendrerit varius mattis, congue sit amet tellus. Aliquam ullamcorper dui sed magna posuere ut elementum enim rutrum. Nam mi erat, porta id ultrices nec, pellentesque vel nunc. Cras varius fermentum iaculis
                 <span class="dot">...</span>
               </p>
@@ -173,7 +179,9 @@
         </div>
       </div>
       <blockquote class="blockquote">
-        <div class="icons icons_blockquote"></div>
+        <div class="icons icons_blockquote">
+          <img src="img/icon-quotes.png" alt="">
+        </div>
         <div class="blockquote-block">
           <span class="blockquote-block__comma">,,</span>
 
@@ -187,7 +195,9 @@
       </blockquote>
       <div class="bottom-line"></div>
       <div class="link">
-        <div class="icons icons_link"></div>
+        <div class="icons icons_link">
+          <img src="img/icon-link.png" alt="">
+        </div>
         <h2 class="link__heading heading_color">
           SOME OF THE BEST FREEBIES ON THE WEB
         </h2>
@@ -201,6 +211,17 @@
 
       </div>
       <div class="bottom-line"></div>
+      <div class="pagination">
+        <div class="pagination__page">
+          <a href="#" class="page-pagination">1</a>
+        </div>
+        <div class="pagination__page">
+          <a href="#" class="page-pagination">2</a>
+        </div>
+        <div class="pagination__page">
+          <a href="#" class="page-pagination">3</a>
+        </div>
+      </div>
     </div>
     {% include "layouts/_aside-blog.html" %} {% block aside %}
 
