--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -37,7 +37,7 @@ a:hover
 .link_active
     color: $is-active
 
-.h3-heading_bebas
+.h3-heading_text
     font-size: 12px
     color: $is-active
     text-transform: uppercase
@@ -51,14 +51,12 @@ a:hover
     white-space: nowrap
 .heading_color
     color: $is-active
-    font-size: 18px
-    line-height: 1
+    
 .text_color
     font-size: 12px
     line-height: 1.5
     color: #414141
-.description__text_more
-    margin-bottom: 50px
+
 .h4-heading-line
     display: flex
     font-size: 14px
@@ -81,19 +79,20 @@ a:hover
     margin-right: 10px
 
 .icons_slide-1,.icons_slide-2,.icons_video,.icons_blockquote,.icons_link
-    background-repeat: no-repeat
-    background-position: 50% 50%
+    // background-repeat: no-repeat
+    // background-position: 50% 50%
+    padding: 19px 0px 0px 23px
 
-.icons_slide-1
-      background-image: url('../img/icon-slide-1.png')
-.icons_slide-2
-    background-image: url('../img/icon-slide-2.png')
-.icons_video
-    background-image: url('../img/icon-play.png')
-.icons_blockquote
-    background-image: url('../img/icon-quotes.png')
-.icons_link
-    background-image: url('../img/icon-link.png')
+// .icons_slide-1
+//       background-image: url('../img/icon-slide-1.png')
+// .icons_slide-2
+//     background-image: url('../img/icon-slide-2.png')
+// .icons_video
+//     background-image: url('../img/icon-play.png')
+// .icons_blockquote
+//     background-image: url('../img/icon-quotes.png')
+// .icons_link
+//     background-image: url('../img/icon-link.png')
 
 
 
