--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -6,8 +6,8 @@
   +bebas
   text-transform: uppercase
   +r(620)
-			display: block
-			text-align: center
+    display: block
+    text-align: center
   &__logo
     +r(620)
       margin-bottom: 20px
@@ -105,9 +105,17 @@
   margin-bottom: 46px
 .description__heading
   +bebas
+  font-size: 18px
+  line-height: 1
   margin-bottom: 20px
-.description__text
-  margin-bottom: 22px
+.description
+  &>p
+    margin-bottom: 22px
+    font-size: 12px
+    line-height: 1.5
+    color: #414141
+  &>p+p
+    margin-bottom: 50px
 .blockquote
   background: #f5f5f5
   position: relative
@@ -139,7 +147,9 @@
     font-size: 12px
     color: #a0a0a0
     margin-bottom: 20px
-.aside-about,.aside__categories
+.aside-about
+  margin-bottom: 35px
+.aside__categories
   margin-bottom: 35px
 .categories-list
   font-size: 12px
