--- a/src/templates/partials/_main.html
+++ b/src/templates/partials/_main.html
@@ -5,7 +5,7 @@
       <div class="post">
         <div class="slider">
           <div class="icons icons_slide-1">
-            <img src="img/icon-slide-1.png" alt="">
+            <img src="img/icon-slide-1.png" alt=""/>
           </div>
           <div class="slider__next">{{mixins.icon('arrow')}}</div>
           <div class="slider__prev">{{mixins.icon('arrow')}}</div>
@@ -67,7 +67,7 @@
       <div class="post">
         <div class="slider">
           <div class="icons icons_slide-2">
-            <img src="img/icon-slide-2.png" alt="">
+            <img src="img/icon-slide-2.png" alt=""/>
           </div>
           <div class="slider-slides js-post-2">
             <div class="slider-slides__bg" style="background-image: url('img/slide-2.png'); background-size: cover">
@@ -123,7 +123,7 @@
       </div>
       <div class="post">
         <div class="icons icons_video">
-          <img src="img/icon-play.png" alt="">
+          <img src="img/icon-play.png" alt=""/>
         </div>
         <div class="post__video">
           <div style="padding:56.25% 0 0 0;position:relative;">
@@ -180,7 +180,7 @@
       </div>
       <blockquote class="blockquote">
         <div class="icons icons_blockquote">
-          <img src="img/icon-quotes.png" alt="">
+          <img src="img/icon-quotes.png" alt=""/>
         </div>
         <div class="blockquote-block">
           <span class="blockquote-block__comma">,,</span>
@@ -196,7 +196,7 @@
       <div class="bottom-line"></div>
       <div class="link">
         <div class="icons icons_link">
-          <img src="img/icon-link.png" alt="">
+          <img src="img/icon-link.png" alt=""/>
         </div>
         <h2 class="link__heading heading_color">
           SOME OF THE BEST FREEBIES ON THE WEB
