--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -170,7 +170,9 @@ figure
     align-items: baseline
     margin-bottom: 50px
 
-
+.link__description
+  font-size: 12px
+  line-height: 1.5
 
 .pagination
   display: flex
