--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -147,9 +147,9 @@
     font-size: 12px
     color: #a0a0a0
     margin-bottom: 20px
-.aside-about
+.about
   margin-bottom: 35px
-.aside__categories
+.categories
   margin-bottom: 35px
 .categories-list
   font-size: 12px
@@ -173,7 +173,9 @@ figure
 .link__description
   font-size: 12px
   line-height: 1.5
-
+.about__description
+  font-size: 12px
+  line-height: 1.5
 .pagination
   display: flex
   margin-bottom: 300px
