--- a/src/templates/layouts/_aside-blog.html
+++ b/src/templates/layouts/_aside-blog.html
@@ -1,21 +1,18 @@
 <!-- BEGIN aside-blog -->
 <aside class="blog-post__aside">
-  <div class="aside-about">
-    <div class="aside-about__heading">
+  <div class="about">
+    <div class="about__heading">
       <h4 class="h4-heading-line">About Jetro</h4>
     </div>
-    <div class="aside-about__description">
-      <p class="text_color">
+      <p class="about__description text_color">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praese nt libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elemen tum imperdiet. Duis sagittis ipsum.
       </p>
-    </div>
   </div>
-  <div class="aside__categories">
-    <div class="categories-block">
-      <div class="categories-block__heading">
+  <div class="categories">
+      <div class="categories__heading">
         <h4 class="h4-heading-line">Categories</h4>
       </div>
-      <div class="categories-block__category">
+      <div class="categories__category">
         <ul class="categories-list">
           <li class="categories-list__video">
             <a href="#" class="categories-list__link">Video
@@ -49,10 +46,8 @@
           </li>
         </ul>
       </div>
-    </div>
   </div>
-  <div class="aside__photo-gallery">
-    <div class="photo-gallery">
+  <div class="photo-gallery">
       <div class="photo-gallery__heading">
         <h4 class="h4-heading-line">Photo gallery</h4>
       </div>
@@ -98,7 +93,6 @@
             </a>
         </figure>
       </div>
-    </div>
   </div>
 </aside>
 <!-- END aside-blog -->
